<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weather_app">WeatherApp</string>
    <string name="title_activity_maps">Map</string>

    <string name="sett_reminder_header">Set Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">We will remind you to make entiries of your expense</string>
    <string name="sett_reminder_time_label">Set Reminder Time</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>
</resources>
